Lesson 7: add product categories, api and web
